// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render from src 1`] = `
<img
  alt=""
  aria-hidden="true"
  class="tc-icon"
  focusable="false"
  src="/foo/bar.png"
/>
`;

exports[`Icon should render from svg 1`] = `
<svg
  aria-hidden="true"
  class="sc-bdfBQB kdhakw tc-svg-icon tc-icon tc-icon-name-svg-dd"
  focusable="false"
  name="svg-dd"
/>
`;

exports[`Icon should render with provided className 1`] = `
<svg
  aria-hidden="true"
  class="sc-bdfBQB kdhakw tc-svg-icon tc-icon custom-class tc-icon-name-svg-dd"
  focusable="false"
  name="svg-dd"
/>
`;

exports[`Icon should support extra props 1`] = `
<svg
  aria-hidden="true"
  class="sc-bdfBQB kdhakw tc-svg-icon tc-icon custom-class tc-icon-name-svg-dd"
  data-custom="hello"
  focusable="false"
  name="svg-dd"
/>
`;

exports[`Icon should support remote svg 1`] = `
<svg
  aria-hidden="true"
  class="sc-bdfBQB kdhakw tc-svg-icon tc-icon"
  focusable="false"
/>
`;

exports[`Icon should support remote svg 2`] = `
<svg
  aria-hidden="true"
  class="sc-bdfBQB kdhakw tc-svg-icon tc-icon"
  focusable="false"
>
  <svg>
    <g>
      <path
        d=""
      />
    </g>
  </svg>
</svg>
`;
